@@ -1,3 +1,8 @@
+2007-04-21 Peter Clifton <pcjc2@cam.ac.uk>
+
+	* src/o_circle_basic.c: Tidy up dist() function in o_circle_basic.c
+	  to be much more readable.
+
 2007-04-17 Peter Clifton <pcjc2@cam.ac.uk>
 
 	Merge changes from noscreen
